Fix spacing for navigation when page is below 300px

--- a/styles.css
+++ b/styles.css
@@ -66,21 +66,6 @@ h1 {
   text-align: right;
 }
 
-/* nav::after {
-  content: '';
-  width: 100%;
-  height: 5%;
-  background-color: white;
-  box-shadow: 0px 8px 14px -5px rgba(0,0,0,0.18);
-} */
-
-/* .spacer-container {
-  display: grid;
-  place-items: center;
-  width: 100%;
-  height: 100%;
-} */
-
 .spacer {
   height: 10px;
   position: absolute;
@@ -89,8 +74,6 @@ h1 {
   z-index: -1;
   width: 100vw;
   transform: translate(-50%, -90%);
-  /* margin-top: 7%; */
-  /* background-color: white; */
   background: rgb(237,166,146);
   background: linear-gradient(90deg, #EA8372 0%, #FFB88C 100%);
   box-shadow: 0px 15px 100px -5px rgba(0,0,0,0.08);
@@ -115,9 +98,6 @@ h1 {
   background: linear-gradient(0deg, rgba(14,20,29,1) 0%, rgba(49,60,75,1) 100%);
   color: white;
 }
-
-
-
 
 
 ul {
@@ -160,6 +140,7 @@ ul li::before {
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
+  transform: translate(-2px, -2px);
 }
 
 .one::before {
@@ -183,7 +164,6 @@ ul li::before {
 li::after {
   content: '';
   position: absolute;
-  /* transform: translate(-55px, 17px); */
   width: 0;
   height: 5px;
   background: rgb(237,166,146);
@@ -209,8 +189,6 @@ li:hover::after {
 }
 
 
-
-
 main {
   margin-top: 8%;
 }
@@ -222,10 +200,23 @@ main section {
   margin-left: 5%;
 }
 
-
-
 img {
-  z-index: 0;
+  z-index: 1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  filter: brightness(0.4);
+  object-fit: cover;
+  transition: all .2s linear;
+}
+
+img::after {
+  content: '';
+  background: black;
+  width: 800px;
+  height: 900px;
+  position: absolute;
+  z-index: 15;
 }
 
 .card {
@@ -233,26 +224,19 @@ img {
   background-color: #F5F5F5;
   width: 220px;
   height: 300px;
-  margin-bottom: 4%;
-  box-shadow: 0px 15px 100px -5px rgba(0,0,0,0.08);
+  margin-bottom: 5%;
+  box-shadow: 0px 15px 100px -5px rgba(0,0,0,0.09);
+  border-radius: 12px;
   /* z-index: 0; */
+  transition: all .2s ease;
+}
+
+.card:hover {
+  transform: translateY(-6px) scale(1)
 }
 
 .card-btn {
   height: 20px;
-}
-
-.img-container {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  align-items: center;
-  height: 30%;
-  padding: 3%;
-  background: url(https://preview.redd.it/mrxef46hc1271.jpg?width=960&crop=smart&auto=webp&s=95b32173e885c515614bf6bcda0545a234b546d0);
-  background-size: cover;
-  filter: brightness(0.5);
-  z-index: 0;
 }
 
 .img-container-test {
@@ -269,16 +253,7 @@ img {
   z-index: 4;
 }
 
-.img-1 {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  /* background: url(./assets/IMG_0142.jpg); */
-  /* background-size: contain; */
-  filter: brightness(0.4);
-  object-fit: cover;
-  transition: all .2s linear;
-}
+
 
 .circle {
   display: relative;
@@ -382,6 +357,7 @@ img {
 .num-text {
   margin-top: 1%;
   color: #333333;
+  font-weight: 300;
 }
 
 .text-container h2 {
@@ -406,6 +382,13 @@ img {
   margin: 9px 0;
   margin-left: 3%;
   z-index: 2;
+}
+.card-box p::after {
+  position: absolute;
+  font-family: "Font Awesome 5 Free";
+  content: '\f105';
+  font-weight: 900;
+  transform: translate(70px, 1px)
 }
 
 
@@ -479,7 +462,9 @@ img {
     grid-template-rows: repeat(1, 1fr);
   }
 
-
+  nav {
+    height: 10%;
+  }
 
     main {
       margin-top: 25%;
